Refactor: interface for page/replacement count services